--- a/package.json
+++ b/package.json
@@ -15,13 +15,10 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^2.0.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "csurf": "^1.9.0",
     "dotenv": "^16.4.5",
-    "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
@@ -32,13 +29,11 @@
     "mongodb": "^3.1.6",
     "mongoose": "^5.2.17",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^1.6.1",
     "nodemailer": "^4.7.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
-    "pug": "^2.0.3",
     "request-ip": "^3.3.0",
-    "sequelize": "^5.0.0-beta.11",
     "socket.io": "^4.7.5",
-    "stripe": "^14.18.0"
+    "stripe": "^14.18.0",
+    "ws": "^8.17.0"
   }
 }
